# agent-backend

./: .env.example  .gitignore  AGENTHARNESS.md  Makefile  README.md  architecture.drawio  docker-compose.yml  go_tasks.csv  go_tasks_realistic_120day.csv
.github/agents/: backend.agent.md  database.agent.md  orchestration.md  python-orchestration.agent.md
docs/: API_SPEC.md  CONFIG_SCHEMA.md  SUBAGENTS.md
docs/templates/: agent.md
golang/pkg/langgraphv1/: doc.go
golang/services/api/: go.mod
golang/services/api/cmd/: main.go  pg.go
golang/services/api/config/: config.go  config_test.go
golang/services/api/handler/: approve.go  approve_test.go  chat.go  chat_handler_test.go  chat_unit_test.go  health.go  memory_integration_test.go  (+2 more)
infra/clickhouse/: single-node.xml
infra/otel/: config.yaml
proto/langgraph/v1/: agent.proto
python/: config.py  prompts.py  pyproject.toml  server.py  tracing.py
python/agents/chat/: graph.py  nodes.py  tools.py
python/agents/math/: __init__.py  graph.py  math_tools.py  nodes.py
python/agents/rag/: graph.py  nodes.py  retriever.py  tools.py
python/agents/router/: graph.py  nodes.py
python/agents/summarize/: graph.py  nodes.py
python/agents/text/: graph.py  nodes.py  tools.py
python/providers/: __init__.py  gemini.py  interfaces.py  llm_provider.py  ollama.py
python/servicer/: agent_servicer.py
tasks/: TASK-001-wire-memory-service-main.md  TASK-002-config-embed-model-validation.md  TASK-003-memory-service-unit-tests.md  TASK-004-pgvector-startup-check.md  TASK-005-memory-integration-test.md
web/: index.html
(+65 files in other folders)
