[tool.poetry]
name = "langgraph-grpc-service"
version = "0.1.0"
description = "Python LangGraph gRPC service — chat and RAG agents"
authors = []
package-mode = false

[tool.poetry.dependencies]
python          = "^3.11"
langgraph       = ">=0.2.0"
langchain-core  = ">=0.2.0"
langchain-openai = ">=0.1.0"
langchain-ollama = ">=0.1.0"
pydantic        = ">=2.7.0"
grpcio          = ">=1.80.0"
grpcio-tools    = ">=1.80.0"
uvloop          = { version = ">=0.19.0", markers = "sys_platform != 'win32'" }
prometheus-client = ">=0.20.0"
python-dotenv   = ">=1.0.0"
opentelemetry-sdk                   = ">=1.25.0"
opentelemetry-exporter-otlp-proto-http = ">=1.25.0"

[tool.poetry.group.dev.dependencies]
pytest          = ">=8.0.0"
pytest-asyncio  = ">=0.23.0"
ruff            = ">=0.4.0"

[tool.poetry.scripts]
serve = "server:main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
